name: hetzner
description: Hetzner Cloud client library.
version: 0.1.0.0
cabal-version: >= 1.2
build-type: Simple

library
  hs-source-dirs: src
  exposed-modules: Hetzner.Cloud, Hetzner.Cloud.Internal
  extensions: ImportQualifiedPost, OverloadedStrings
  ghc-options: -Wall
  build-depends:
      base, text, aeson, network, megaparsec
    , http-conduit, bytestring, yaml
